--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "vue create --preset ./ demo"
+    "test": "vue create --preset ./ demo",
+    "publish": "npm publish --access=public"
   },
+  "files": [
+    "generator",
+    "index.js"
+  ],
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.5.1",
     "@vue/eslint-config-prettier": "^4.0.1",
